# PaperKit

./: MANIFEST.in  README.md  acknowledgements.md  pyproject.toml  test.py
licenses/: docling.txt
model/: parsed_document.py  source_document.py
p6t/: bootsrap.py  cli.py
p6t/bundle/: bundle.py  cli.py
p6t/bundle/templates/: index.jinja
p6t/bundle/templates/css/: actions.css  code.css  explorer.css  highlight.css  inline-captions.css  navbar.css  reference-section.css  select-toolbar.css  styles.css  toolbar.css
p6t/bundle/templates/js/: loader.js
p6t/bundle/templates/js/actions/: blocks.js  editor.js  medias.js  selection.js  spans.js
p6t/bundle/templates/js/api/: actions.js  gliner.js  tts.js  utils.js
p6t/bundle/templates/js/dom/: element.js  prefetch.js  snapshots.js  utils.js
p6t/bundle/templates/js/highlighter/: manager.js  ui.js
p6t/bundle/templates/js/marking/: annotation.js  callouts.js  regex.js  stopwords.js
p6t/bundle/templates/js/tts/: abbreviations.js  export.js  player.js  speech.js
p6t/bundle/templates/partials/: _element.jinja  _fab_group.jinja  _reference_section.jinja  _toolbar.jinja
p6t/bundling/: bundle.py
p6t/bundling/templates/: index.jinja
p6t/bundling/templates/css/: callouts.css  click-actions.css  editor.css  fab.css  flashing.css  media-pop.css  references.css  text-ref.css  tts-player.css
p6t/bundling/templates/js/: state.js
p6t/bundling/templates/js/actions/: blocks.js  editor.js  spans.js
p6t/bundling/templates/js/api/: actions.js  utils.js
p6t/bundling/templates/js/dom/: element.js  explorer.js  popup_menu.js  prefetch.js  scroll.js  ui_freeze.js
p6t/bundling/templates/js/highlighter/: manager.js  ui.js
p6t/bundling/templates/js/marking/: callouts.js
p6t/bundling/templates/js/tts/: export.js  player.js  speech.js
p6t/bundling/templates/partials/: _navbar.jinja  _reference_item.jinja  _toolbar.jinja
p6t/db/: db.py
p6t/model/: normalized_document.py  parsed_document.py  source_document.py
p6t/model/dto/: ir_interfaces.py  ir_nodes.py  ir_tree.py
p6t/normalizing/: cli.py  media_resolver.py  normalize.py  normalized_document_builder.py  text_cleaner.py  text_fixer.py
p6t/normalizing/core/: media_resolver.py  normalized_document_builder.py  text_cleaner.py  text_fixer.py
p6t/parsing/: cli.py  docling_converter.py  ocr copy.py  ocr.py  parse.py
p6t/parsing/core/: docling_converter.py
p6t/persistance/: conf.py  db.py
p6t/pipelines/: cli.py
p6t/serialize/: cli.py  core.py  serialize.py
p6t/serializing/: serialize.py
p6t/tools/: api.py  bootsrap.py  conf.py  lazy_loading.py
p6t/tools/core/: gliner_probe.py  llm.py  summary.py  wikipedia.py  wordnet.py
p6t/tools/utils/: model.py  utils.py
