[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PaperKit"
version = "0.1.0"
description = "Making science more accecible! "
requires-python = ">=3.12"

dependencies = [
    "curl_cffi",
    "piper-tts",
    "fastapi",
    "uvicorn",
    
     # PDF Parsing
    "docling",

    # Maths Inlining
    "surya-ocr", # depends on llama-cpp backend or vlm
    
    # PDF Cropping
    "pdf2image",
    "python-poppler", # depends on poppler-cpp backend,
    
    # Figure angle
    "pytesseract", # you need to install it on your machine

    # Sentence Segmentation
    "pysbd",

    # Text Normalization
    "deepmultilingualpunctuation",
    "nltk", # + nltk.download('words')
    "language_tool_python", # requires openjdk 
    "pylatexenc",

    # tools
    "gliner2[local]",
    "spacy",
    "sumy",
    "sentence_transformers",
    "scikit-learn"
]

[project.scripts]
p6t-parse = "p6t.parse:main"