[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PaperKit"
version = "0.1.0"
description = "Making science more accecible! "
requires-python = ">=3.12"

dependencies = [
    "curl_cffi",
    "fastapi",
    "uvicorn",
    
    # PDF Parsing
    "docling",

    # Maths Inlining
    "surya-ocr", # depends on llama-cpp backend or vlm
    
    # PDF Cropping
    "pdf2image",
    
    # Figure angle
    "pytesseract", # you need to install it on your machine

    # Sentence Segmentation
    "pysbd",

    # Text Normalization
    "deepmultilingualpunctuation",
    "nltk", # + nltk.download('words')
    "language_tool_python", # requires openjdk 
    "pylatexenc",

    # tools
    "gliner2[local]",
    "spacy",
    "sumy",
    "sentence_transformers",
    "scikit-learn",
    "kokoro-tts" # gotta install the voices
]

[project.scripts]
p6t = "p6t.cli:main"

[tool.poetry.dependencies]
surya-ocr = "0.17.1"
deepmultilingualpunctuation = "1.0.1"
transformers = "4.56.1"
numpy = "2.4.6"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
p6t = ["bundling/templates/**/*"]
